footer text color

--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,6 @@
 .footer {
   @apply bg-linear-to-b from-blue-700 to-zinc-700 font-outfit p-6 rounded-3xl;
 }
+.footer-brand-name {
+  @apply bg-linear-to-b from-blue-700 to-zinc-700 bg-clip-text text-transparent;
+}
