--- a/src/components/hero/herocss.scss
+++ b/src/components/hero/herocss.scss
@@ -1,10 +1,10 @@
 .hero-site{
    opacity: 1;
   pointer-events: auto;
-  background-color: #000;
+  background-color: #f3f0f0;
   justify-content: center;
   align-items: flex-start;
-  min-height: 350vh;
+  min-height: 150vh;
   position: relative;
   overflow: visible;
   display: flex;
