--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -1,7 +1,7 @@
 .profile-section {
   width: 100%;
-  background: #000;
-  color: #fff;
+  background: #ffffff;
+  color: #000;
   overflow: hidden;
 }
 
