--- a/src/components/profile/profile.scss
+++ b/src/components/profile/profile.scss
@@ -10,19 +10,17 @@
   position: relative;
 
   .container {
-    max-width: 1200px;
+    max-width: 1600px;
     margin: 0 auto;
     padding: 0 20px;
   }
 
   .profile-content {
-    text-align: center;
-    max-width: 900px;
     margin: 0 auto;
   }
 
   .profile-title {
-    font-size: 120px;
+    font-size: 25px;
     font-weight: 400;
     line-height: 1;
     margin-bottom: 40px;
@@ -31,17 +29,18 @@
   }
 
   .profile-subtitle {
-    font-size: 32px;
-    font-weight: 300;
+    margin: 0 auto 30px auto;
+    text-align: center;
+    font-size: 75px;
+    font-weight: 700;
     line-height: 1.4;
-    margin-bottom: 30px;
     letter-spacing: 0.01em;
-    font-family: 'Inter', sans-serif;
+    // font-family: 'Inter', sans-serif;
   }
 
   .profile-description {
-    font-size: 18px;
-    font-weight: 300;
+    font-size: 20px;
+    font-weight: 600;
     line-height: 1.6;
     opacity: 0.9;
     font-family: 'Inter', sans-serif;
